[gd_scene load_steps=7 format=2]

[ext_resource path="res://Source/UI/Buttons/SceneChangeButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://Source/UI/Menu/End menu.tscn" type="PackedScene" id=2]
[ext_resource path="res://Source/UI/Resources/theme.tres" type="Theme" id=3]
[ext_resource path="res://Source/UI/Menu/User Interface.gd" type="Script" id=4]
[ext_resource path="res://Source/UI/Bars/HPBar/HPBar.tscn" type="PackedScene" id=5]
[ext_resource path="res://Source/UI/Bars/ThrusterBar/ThrusterBar.tscn" type="PackedScene" id=6]

[node name="User Interface" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
end_menu = ExtResource( 2 )

[node name="ProgressBars" type="VBoxContainer" parent="."]
margin_left = 30.0
margin_top = 20.0
margin_right = 580.0
margin_bottom = 170.0
rect_min_size = Vector2( 400, 100 )
rect_scale = Vector2( 0.75, 0.5 )
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HPBar" parent="ProgressBars" instance=ExtResource( 5 )]
margin_top = 12.0
margin_right = 550.0
margin_bottom = 65.0

[node name="ThrusterBar" parent="ProgressBars" instance=ExtResource( 6 )]
margin_top = 85.0
margin_right = 550.0
margin_bottom = 138.0

[node name="Score" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -500.0
margin_bottom = 100.0
rect_min_size = Vector2( 500, 100 )
text = "SCORE : %s"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseOverlay" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.247059 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause" type="Label" parent="PauseOverlay"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -200.0
margin_top = 100.0
margin_right = 200.0
margin_bottom = 200.0
text = "Pause"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseMenu" type="VBoxContainer" parent="PauseOverlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -105.0
margin_right = 200.0
margin_bottom = 105.0
custom_constants/separation = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueButton" type="Button" parent="PauseOverlay/PauseMenu"]
margin_right = 400.0
margin_bottom = 100.0
rect_min_size = Vector2( 400, 100 )
text = "CONTINUE"

[node name="EndButton" parent="PauseOverlay/PauseMenu" instance=ExtResource( 1 )]
margin_top = 150.0
margin_right = 400.0
margin_bottom = 250.0
text = "END"
next_scene = "res://Source/UI/Menu/End menu.tscn"
[connection signal="pressed" from="PauseOverlay/PauseMenu/ContinueButton" to="." method="_on_ContinueButton_pressed"]
